log

Tue 15 Aug 2023 08:13:52 PM UTC: 
 tests:  0|7
total_score: 0/70
96f4db7
Tue 15 Aug 2023 08:29:55 PM UTC: 
 exercises.c | 10 +++++++++-
 1 file changed, 9 insertions(+), 1 deletion(-)
 tests:  0|6
total_score: 10/70
228e3c9
Tue 15 Aug 2023 08:45:31 PM UTC: 
 exercises.c | 14 +++++++++++++-
 1 file changed, 13 insertions(+), 1 deletion(-)
 tests:  0|5
total_score: 20/70
d2a6bc8
Tue 15 Aug 2023 08:48:28 PM UTC: 
 exercises.c | 10 +++++-----
 1 file changed, 5 insertions(+), 5 deletions(-)
 tests:  0|5
total_score: 20/70
d324a08
Tue 15 Aug 2023 08:54:32 PM UTC: 
 exercises.c | 11 ++++++++++-
 1 file changed, 10 insertions(+), 1 deletion(-)
In file included from test.c:1:
exercises.c: In function ‘filterEvenNumbers’:
exercises.c:48:7: error: array size missing in ‘newArr’
   48 |   int newArr[];
      |       ^~~~~~
exercises.c:55:10: error: function returns address of local variable [-Werror=return-local-addr]
   55 |   return newArr;
      |          ^~~~~~
cc1: all warnings being treated as errors
Compilation failed
7da0a25
Tue 15 Aug 2023 08:54:49 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:1:
exercises.c: In function ‘filterEvenNumbers’:
exercises.c:55:10: error: function returns address of local variable [-Werror=return-local-addr]
   55 |   return newArr;
      |          ^~~~~~
cc1: all warnings being treated as errors
Compilation failed
58c16a9
Tue 15 Aug 2023 08:55:00 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:1:
exercises.c: In function ‘filterEvenNumbers’:
exercises.c:55:16: error: returning ‘int’ from a function with return type ‘int *’ makes pointer from integer without a cast [-Werror=int-conversion]
   55 |   return newArr[(*newSize)];
      |          ~~~~~~^~~~~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
74bddc3
Tue 15 Aug 2023 08:57:52 PM UTC: 
 exercises.c | 7 ++++---
 1 file changed, 4 insertions(+), 3 deletions(-)
In file included from test.c:1:
exercises.c: In function ‘filterEvenNumbers’:
exercises.c:48:7: error: array size missing in ‘newArr’
   48 |   int newArr[];
      |       ^~~~~~
exercises.c:56:10: error: function returns address of local variable [-Werror=return-local-addr]
   56 |   return newArr;
      |          ^~~~~~
cc1: all warnings being treated as errors
Compilation failed
8149b84
Tue 15 Aug 2023 08:58:48 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:1:
exercises.c: In function ‘filterEvenNumbers’:
exercises.c:48:16: error: initialization of ‘int’ from ‘void *’ makes integer from pointer without a cast [-Werror=int-conversion]
   48 |   int newArr = NULL;
      |                ^~~~
exercises.c:53:13: error: subscripted value is neither array nor pointer nor vector
   53 |       newArr[(*newSize)] = arr[i];
      |             ^
exercises.c:56:10: error: returning ‘int’ from a function with return type ‘int *’ makes pointer from integer without a cast [-Werror=int-conversion]
   56 |   return newArr;
      |          ^~~~~~
cc1: all warnings being treated as errors
Compilation failed
e1b5e24
Tue 15 Aug 2023 08:58:57 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
8104572
Tue 15 Aug 2023 09:01:20 PM UTC: 
 exercises.c | 6 +++---
 1 file changed, 3 insertions(+), 3 deletions(-)
In file included from test.c:1:
exercises.c: In function ‘filterEvenNumbers’:
exercises.c:56:10: error: function returns address of local variable [-Werror=return-local-addr]
   56 |   return newArr;
      |          ^~~~~~
cc1: all warnings being treated as errors
Compilation failed
b214ded
Tue 15 Aug 2023 09:02:33 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:1:
exercises.c: In function ‘filterEvenNumbers’:
exercises.c:56:16: error: returning ‘int’ from a function with return type ‘int *’ makes pointer from integer without a cast [-Werror=int-conversion]
   56 |   return newArr[*newSize];
      |          ~~~~~~^~~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
502201a
Tue 15 Aug 2023 09:03:51 PM UTC: 
 exercises.c | 7 ++++---
 1 file changed, 4 insertions(+), 3 deletions(-)
In file included from test.c:1:
exercises.c: In function ‘filterEvenNumbers’:
exercises.c:57:10: error: function returns address of local variable [-Werror=return-local-addr]
   57 |   return newArr;
      |          ^~~~~~
cc1: all warnings being treated as errors
Compilation failed
a9a1bab
